fixed some horrible bugs, turned some longs into ints and implemented offset calculation